# Paperless-MCP-Server

./: Dockerfile  LICENSE  README.md  index.ts  package-lock.json  package.json  pyproject.toml  server.py  smithery.yaml  tsconfig.json  types.d.ts
