[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-paperlessngx"
version = "0.1.0"
description = "MCP server for Paperless-ngx document management system"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
{ name = "Model Context Protocol Contributors" },
]
classifiers = [
"License :: OSI Approved :: MIT License",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.10",
]
dependencies = [
"fastapi>=0.95.1",
"pydantic>=2.0.0",
"typing-extensions",
"uvicorn>=0.22.0",
"requests>=2.28.0",
"httpx>=0.24.0",
"python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
"black",
"isort",
"mypy",
"pytest",
"pytest-asyncio",
"pytest-mock",
"ruff",
]

[project.scripts]
mcp-server-paperlessngx = "mcp_server_paperlessngx:main"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py310"

